// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Link external link snapshot 1`] = `
<styled__StyledLink
  href="https://test.com/"
>
  Test
</styled__StyledLink>
`;

exports[`components/Link internal link snapshot 1`] = `
<styled__StyledLink
  activeClassName="___active"
  exact={true}
  to="/test"
>
  Test
</styled__StyledLink>
`;
